syntax = "proto2";

package com.apple.foundationdb.record.test1wrapper;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecords1WrapperProto";

import "record_metadata_options.proto";

option (schema).store_record_versions = true;

message Int32List {
  repeated int32 values = 1;
}

message MySimpleRecord {
  optional int64 rec_no = 1 [(field).primary_key = true];
  optional string str_value_indexed = 2 [(field).index = {}];
  optional int32 num_value_unique = 3 [(field).index = { unique: true }];
  optional int32 num_value_2 = 4;
  optional int32 num_value_3_indexed = 5 [(field).index = {}];
  optional Int32List repeater = 6;
}

message RecordTypeUnion {
  optional MySimpleRecord _MySimpleRecord = 1;
}
